# cmakequickstart

./: CMakeLists.txt  apache-arrow-apt-source-latest-noble.deb  arrowio.cpp  arrowtest.cpp  csvtest.cpp  main.cpp
